helm/charts/monochrome/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: monochrome
spec:
  selector:
    app: monochrome
  ports:
    - port: 4173
