helm/charts/monochrome/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monochrome
spec:
  rules:
    - host: stream.music.koudijs.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monochrome
                port:
                  number: 4173
  tls:
    - secretName: stream-music-koudijs-lan
      hosts:
        - stream.music.koudijs.lan
